bugfix
map now pseudo-scales with screen and is centered. Banner buttons now do not overlap with other elements

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,10 +4,19 @@ html, body {
 
 #mapContainer {
     height: 750px;
+    display: flex;
+    justify-content: center;
 }
 
 #map {
-    height: 500px;
-    /* width: 100%; */
+    height: 600px;
+    width: 80%;
     /* border: solid 1px black; */
 }
+
+@media only screen and (max-width: 500px) {
+    #map {
+      width: 100%;
+      height: 400px;
+    }
+  }
